# ShopkeeperThinkTank

./: .env.example  .gitignore  main.py  pyproject.toml
app/: __init__.py
app/api/: __init__.py
app/api/http/: __init__.py  import_server.py  query_server.py
app/api/schemas/: __init__.py  import_.py  query.py
app/infra/: __init__.py
app/infra/config/: providers.py
app/infra/document_parse/: mineru_gateway.py
app/infra/llm/: __init__.py  providers.py
app/infra/object_storage/: __init__.py  minio_gateway.py
app/infra/persistence/: history_repository.py
app/infra/vectorstore/: __init__.py  milvus_gateway.py
app/process/: __init__.py
app/process/import_/: __init__.py
app/process/import_/agent/: __init__.py  main_graph.py  state.py
app/process/import_/agent/nodes/: __init__.py  node_bge_embedding.py  node_document_split.py  node_entry.py  node_import_milvus.py  node_item_name_recognition.py  (+2 more)
app/process/query/agent/: main_graph.py  state.py
app/rag/: __init__.py
app/rag/import_/: __init__.py  config.py  embedding_service.py  entry_service.py  index_service.py  item_name_service.py  markdown_image_service.py  pdf_parse_service.py  split_service.py
app/rag/query/: answer_service.py  embedding_search_service.py  hyde_search_service.py  item_name_confirm_service.py  rerank_service.py  rrf_service.py  web_search_service.py
app/shared/: __init__.py
app/shared/clients/: __init__.py  milvus_utils.py  minio_utils.py  mongo_history_utils.py
app/shared/config/: bailian_mcp_config.py  common.py  embedding_config.py  lm_config.py  milvus_config.py  mineru_config.py  minio_config.py  reranker_config.py  settings_config.py
app/shared/model/: embedding_utils.py  lm_utils.py  reranker_utils.py
app/shared/runtime/: __init__.py  load_prompt.py  logger.py
app/shared/utils/: escape_milvus_string_utils.py  path_util.py  sse_utils.py  task_utils.py
app/vectorstore/: __init__.py
docs/superpowers/specs/: 2026-07-24-python-comment-refresh-design.md
tests/: test_index_service.py
(+7 files in other folders)
