[project]
name = "ai_0415_knowledge_base"
version = "0.1.0"
description = "Add your description here"
# CUDA 12.8 GPU 依赖在当前镜像中只提供本项目使用的 CPython 3.11 Windows wheel。
# 固定解释器版本，避免 uv 为缺少匹配 GPU wheel 的其他 Python 版本求解失败。
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.135.1",
    "flagembedding>=1.3.5",
    "grandalf>=0.8",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.3",
    "loguru>=0.7.3",
    "magic-pdf>=1.3.12",
    "mineru-kie-sdk>=0.1.1",
    "minio>=7.2.20",
    "modelscope>=1.35.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pymilvus[model]>=2.6.10",
    "pymilvus-model>=0.3.2",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "regex>=2026.2.28",
    "torch==2.11.0+cu128",
    "torchaudio==2.11.0+cu128",
    "torchvision==0.26.0+cu128",
    "uvicorn>=0.42.0",
    "transformers>=4.57.6",
    "datasets>=4.8.4",
    "openai-agents>=0.4.2",
    "requests>=2.32.5",
    "langchain-mcp-adapters>=0.2.2",
    "dashscope>=1.25.17",
    "ipython>=9.15.0",
    "logger>=1.4",
]
# 项目下配置环境变量(更推荐)
[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv]
# 该项目当前只部署在 Windows + CPython 3.11 的 NVIDIA GPU 环境。
# 限定解析目标，避免为没有匹配 CUDA wheel 的其他平台生成无效锁定结果。
environments = ["sys_platform == 'win32'"]
# 本机代理访问该国内镜像会停滞，下载 CUDA wheel 时直接连接镜像。
no-proxy = ["mirrors.aliyun.com"]

[tool.uv.sources]
# 阿里镜像是平铺的 wheel 下载目录，而非 Python 包索引，因此使用已验证的直链。
# uv 会把下载文件的 SHA256 写入 uv.lock，安装时仍会校验文件完整性。
torch = { url = "https://mirrors.aliyun.com/pytorch-wheels/cu128/torch-2.11.0%2Bcu128-cp311-cp311-win_amd64.whl" }
torchvision = { url = "https://mirrors.aliyun.com/pytorch-wheels/cu128/torchvision-0.26.0%2Bcu128-cp311-cp311-win_amd64.whl" }
torchaudio = { url = "https://mirrors.aliyun.com/pytorch-wheels/cu128/torchaudio-2.11.0%2Bcu128-cp311-cp311-win_amd64.whl" }
